<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addstocks.AddStocksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                android:src="@drawable/ic_back_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_stocks"
                android:textAlignment="center"
                android:textColor="@color/primaryGray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_form"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/description"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/category"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_cam"
            android:focusable="false"
            android:hint="@string/stock_image"
            android:inputType="none"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_stock"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/darker_gray">

            <ImageView
                android:id="@+id/iv_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/primaryBlue"
            android:text="@string/save"
            app:cornerRadius="6dp" />


    </LinearLayout>

</ScrollView>