<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.editstocks.EditStocksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                android:src="@drawable/ic_back_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_stocks_quantity"
                android:textAlignment="center"
                android:textColor="@color/primaryGray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_incoming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/incoming_home" />

            <RadioButton
                android:id="@+id/btn_outgoing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/outgoing_home" />

        </RadioGroup>

        <EditText
            android:id="@+id/ed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:clickable="true"
            android:focusable="false"
            android:hint="Date"
            android:inputType="none"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />


        <EditText
            android:id="@+id/ed_stocks_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/stocks_amount"
            android:inputType="number"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/primaryBlue"
            android:text="@string/save"
            app:cornerRadius="6dp" />


    </LinearLayout>

</ScrollView>